KENNY DHAVE CAÑEDO

--- a/Demo1.html
+++ b/Demo1.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-
-<html>
-<head>
-  <title>MY WORLD</title>
-</head>
+  <html>
+  <head>
+    <title>MY WORLD</title>
+  </head>
 <body>
- 
- <h1>HELLO WORLD</h1>
-  <p>PRINT here</p>
   
-</body>
-</html>
+  <h1>HELLO WORLD</h1>
+  <p>PRINT HERE</p>
+  </body>
+</head>
