--- a/Demo1.html
+++ b/Demo1.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-    <title>MY WORLD</title>
-  </head>
-<body>
-  
-  <h1>HELLO WORLD</h1>
-  <p>PRINT HERE</p>
-  </body>
+<html>
+<head>
+  <title> Ken, World!</title>
 </head>
+
+<body>
+  <h1> Hello, World! </h1>
+  <p> Hi there </p>
+
+</body>
+</html>
