exercise-1 odim.html

--- a/exercise-1 odim.html
+++ b/exercise-1 odim.html
@@ -12,6 +12,12 @@ Super Retina XDR display
   <h5>The iPhone 15 display has rounded corners that follow a beautiful curved design, and these corners are within a standard rectangle. When measured as a standard rectangular shape, the screen is 6.12 inches diagonally (actual viewable area is less).</h5>
   <p>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnLNutg6bvsvtKVmXmWFVvj_kEnBgxceiNLw&usqp=CAU.jpg">
-    <a href="https://www.apple.com/ph/iphone-15/specs/">view more</a>
+    
   </head>
 </html>
+</head>
+<body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aa3kJXXIKEc?si=-leh9H5h5Q0rYGFf&amp;start=21" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</body>
+</html>
+<a href="https://www.apple.com/ph/iphone-15/specs/">view more</a>
