--- a/Demo 1.html
+++ b/Demo 1.html
@@ -1,11 +1,10 @@
+<! DOCTYPE html>
 <html>
-	<body bgcolor= "Gray">
-	<head><title> HER (My isekai)</title>
-	</head>
-<center>
-<body>
-
-<hr> 	
-<h1><marquee>Hi, its me im the problem?</marquee></h1>
-</center>
-<p> PRINT THERE</p>
+<title>MY WORLD</title>
+</head>
+ <Body>
+ 
+ <h1>HELLO WORLD</h1>
+ <p>PRINT here </p>
+ </body>
+ </html>
