--- a/ODIM/activity4.html
+++ b/ODIM/activity4.html
@@ -115,7 +115,7 @@
         border: none;
         height: 30px;
         width: 70px;
-        cursor: pointer;
+        margin-bottom: 11px;
         transition: 0.70s;
     }
     .stretch-button:hover{
@@ -124,6 +124,7 @@
         border: none;
         height: 40px;
         width: 100px;
+        margin-bottom: 1px;
         cursor: pointer;
     }
 </style>
@@ -143,6 +144,7 @@
         border: none;
         height: 30px;
         width: 70px;
+        margin-top: 5px;
         cursor: pointer;
         transition: 0.05s;
     }
@@ -160,6 +162,7 @@
 <br>
 <br>
 <br>
+<br>
 <style>
     div{
     display: inline;
@@ -168,12 +171,13 @@
     border: none;
     height: 20px;
     width: 10px;
-    padding-top: 5px;
+    padding-top: 6px;
     padding-bottom: 5px;
     padding-right: 10px;
     padding-left: 10px;
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 5px;
     transition: 0.10s;
 }
    div:hover{
